force-app/main/default/objects/Notification_SLA_Setting__mdt/Notification_SLA_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Notification SLA Setting</label>
    <pluralLabel>Notification SLA Settings</pluralLabel>
</CustomObject>