force-app/main/default/objects/Notification_SLA_Setting__mdt/fields/Notification_Body__c.field-meta.xml
<CustomField>
    <fullName>Notification_Body__c</fullName>
    <label>Notification Body</label>
    <type>TextArea</type>
</CustomField>