force-app/main/default/objects/Notification_SLA_Setting__mdt/fields/Notification_Days__c.field-meta.xml
<CustomField>
    <fullName>Notification_Days__c</fullName>
    <label>Notification Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>