force-app/main/default/objects/Notification_SLA_Setting__mdt/fields/Notification_Template__c.field-meta.xml
<CustomField>
    <fullName>Notification_Template__c</fullName>
    <label>Notification Template</label>
    <length>100</length>
    <type>Text</type>
</CustomField>